# node-sdk/src/openapi/models/CreateAccountBody.ts
@@ -1,0 +1,71 @@
+/**
+ * Prism
+ * The API for Prism
+ *
+ * OpenAPI spec version: 1.0
+ * Contact: support@prism.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { AccountsBranding } from './AccountsBranding';
+import { HttpFile } from '../http/http';
+
+export class CreateAccountBody {
+    'branding'?: AccountsBranding;
+    'connected_accounts'?: Array<string>;
+    'invoice_prefix'?: string;
+    'name': string;
+    'parent_account'?: string;
+    'platform_account'?: boolean;
+
+    static readonly discriminator: string | undefined = undefined;
+
+    static readonly attributeTypeMap: Array<{name: string, baseName: string, type: string, format: string}> = [
+        {
+            "name": "branding",
+            "baseName": "branding",
+            "type": "AccountsBranding",
+            "format": ""
+        },
+        {
+            "name": "connected_accounts",
+            "baseName": "connected_accounts",
+            "type": "Array<string>",
+            "format": ""
+        },
+        {
+            "name": "invoice_prefix",
+            "baseName": "invoice_prefix",
+            "type": "string",
+            "format": ""
+        },
+        {
+            "name": "name",
+            "baseName": "name",
+            "type": "string",
+            "format": ""
+        },
+        {
+            "name": "parent_account",
+            "baseName": "parent_account",
+            "type": "string",
+            "format": ""
+        },
+        {
+            "name": "platform_account",
+            "baseName": "platform_account",
+            "type": "boolean",
+            "format": ""
+        }    ];
+
+    static getAttributeTypeMap() {
+        return CreateAccountBody.attributeTypeMap;
+    }
+
+    public constructor() {
+    }
+}
+
