# node-sdk/src/openapi/types/PromiseAPI.ts
@@ -5,8 +5,10 @@ import { Configuration} from '../configuration'
 import { Account } from '../models/Account';
 import { AccountAllOf } from '../models/AccountAllOf';
 import { AccountAllOfBranding } from '../models/AccountAllOfBranding';
+import { AccountsBranding } from '../models/AccountsBranding';
 import { ApiKey } from '../models/ApiKey';
 import { ApiKeyAllOf } from '../models/ApiKeyAllOf';
+import { CreateAccountBody } from '../models/CreateAccountBody';
 import { CreateCustomerBody } from '../models/CreateCustomerBody';
 import { CreateFeeBody } from '../models/CreateFeeBody';
 import { CreateInvoiceBody } from '../models/CreateInvoiceBody';
@@ -25,6 +27,7 @@ import { Fee } from '../models/Fee';
 import { FeeAllOf } from '../models/FeeAllOf';
 import { Invoice } from '../models/Invoice';
 import { InvoiceAllOf } from '../models/InvoiceAllOf';
+import { ListAccountsResponse } from '../models/ListAccountsResponse';
 import { ListCustomersResponse } from '../models/ListCustomersResponse';
 import { ListFeesResponse } from '../models/ListFeesResponse';
 import { ListInvoicesResponse } from '../models/ListInvoicesResponse';
@@ -48,6 +51,7 @@ import { Transaction } from '../models/Transaction';
 import { TransactionAllOf } from '../models/TransactionAllOf';
 import { Transfer } from '../models/Transfer';
 import { TransferAllOf } from '../models/TransferAllOf';
+import { UpdateAccountBody } from '../models/UpdateAccountBody';
 import { UpdateCustomerBody } from '../models/UpdateCustomerBody';
 import { UpdateInvoiceBody } from '../models/UpdateInvoiceBody';
 import { UpdatePayoutWalletBody } from '../models/UpdatePayoutWalletBody';
@@ -58,6 +62,70 @@ import { Wallet } from '../models/Wallet';
 import { WalletAllOf } from '../models/WalletAllOf';
 import { Webhook } from '../models/Webhook';
 import { WebhookAllOf } from '../models/WebhookAllOf';
+import { ObservableAccountsApi } from './ObservableAPI';
+
+import { AccountsApiRequestFactory, AccountsApiResponseProcessor} from "../apis/AccountsApi";
+export class PromiseAccountsApi {
+    private api: ObservableAccountsApi
+
+    public constructor(
+        configuration: Configuration,
+        requestFactory?: AccountsApiRequestFactory,
+        responseProcessor?: AccountsApiResponseProcessor
+    ) {
+        this.api = new ObservableAccountsApi(configuration, requestFactory, responseProcessor);
+    }
+
+    /**
+     * Create Account
+     * @param prism_account The ID of the connected Prism account you are making a request on behalf on.
+     * @param create_account_body 
+     */
+    public create(prism_account?: string, create_account_body?: CreateAccountBody, _options?: Configuration): Promise<Account> {
+        const result = this.api.create(prism_account, create_account_body, _options);
+        return result.toPromise();
+    }
+
+    /**
+     * List Accounts
+     * @param limit A limit on the number of objects to be returned between 1 and 100.
+     * @param page Index of the page to be returned in a paginated response.
+     * @param sort Specifies whether documents are sorted in an ascending or descending order.
+     * @param expand Specifies which fields to populate in the response.
+     * @param prism_account The ID of the connected Prism account you are making a request on behalf on.
+     */
+    public list(limit?: number, page?: number, sort?: any, expand?: string, prism_account?: string, _options?: Configuration): Promise<ListAccountsResponse> {
+        const result = this.api.list(limit, page, sort, expand, prism_account, _options);
+        return result.toPromise();
+    }
+
+    /**
+     * Retrieve Account By Id
+     * @param id 
+     * @param expand Specifies which fields to populate in the response.
+     * @param prism_account The ID of the connected Prism account you are making a request on behalf on.
+     */
+    public retrieve(id: string, expand?: string, prism_account?: string, _options?: Configuration): Promise<Account> {
+        const result = this.api.retrieve(id, expand, prism_account, _options);
+        return result.toPromise();
+    }
+
+    /**
+     * Update Account By Id
+     * @param id 
+     * @param prism_account The ID of the connected Prism account you are making a request on behalf on.
+     * @param update_account_body 
+     */
+    public update(id: string, prism_account?: string, update_account_body?: UpdateAccountBody, _options?: Configuration): Promise<Account> {
+        const result = this.api.update(id, prism_account, update_account_body, _options);
+        return result.toPromise();
+    }
+
+
+}
+
+
+
 import { ObservableCustomersApi } from './ObservableAPI';
 
 import { CustomersApiRequestFactory, CustomersApiResponseProcessor} from "../apis/CustomersApi";
